[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.13"
futures = "0.3"


[[test]]
name = "adder"
harness = false  # allows Cucumber to print output instead of libtest